<resources>
    <string name="app_name">GesTI</string>
    <string name="idusuario">Id de Usuario</string>
    <string name="contrasena">Contraseña</string>
    <string name="login">Ingresar al Sistema</string>
    <string name="bienvenida">Bienvenido (a) </string>
    <string name="tipousuario">Tipo de Usuario</string>
    <string name="navTicket">Tickets</string>
    <string name="navLiquidacion">Liquidación</string>
    <string name="navPerfil">Perfil</string>
    <string name="navCerrarSesion">Cerrar Sesión</string>

    <string name="mensajeLoginNoUsuario">Debe ingresar su Id de Usuario</string>
    <string name="mensajeLoginNoContr">Debe ingresar su contraseña</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nroticket">Nro. Ticket</string>
    <string name="ticket">Ticket</string>
    <string name="estadoticket">Estado</string>
    <string name="fechaticket">Fecha Ticket</string>
    <string name="cliente">Cliente</string>
    <string name="sede">Sede de Cliente</string>
    <string name="ticketsasignados">Tickets Asignados</string>
    <string name="liquidacion">Liquidación de Gastos</string>

    <string name="api_map">AIzaSyAHQ1gxeb00CEwpk7JMKHaJYYVCAHCbwq4</string>
    <string name="api_fabric">3bc7c7df773981a35f691f3cd79a9c1a21e6af1a</string>

    <string name="default_web_api_url">http://api.ticonsultingsac.com/api/api/</string>
    <string name="default_ruta_archivos">http://api.ticonsultingsac.com/files/</string>


    <string name="tituloticket">Título</string>
    <string name="detalleticket">Detalle</string>
    <string name="solucionticket">Solución</string>
    <string name="filtro">Filtrar por:</string>
    <string name="ticketrepuestos">Repuestos Utilizados</string>
    <string name="agregarrepuestos">Agregar Repuestos</string>
    <string name="buscarrepuesto">Buscar Repuesto</string>
    <string name="atendido">Atendido</string>
    <string name="repuesto">Repuestos</string>
    <string name="esperarepuesto">Espera Rep.</string>
    <string name="itemdescripcion">Descripción: </string>
    <string name="moneda">Mon</string>
    <string name="preciorep">Precio</string>
    <string name="itemcantidad">Cant.</string>
    <string name="norepuestos">El ticket no tiene repuestos asignados</string>
    <string name="cantidad">Cantidad</string>
    <string name="urlserver">URL del Servidor</string>
    <string name="guardarconfig">Guardar Configuración</string>
    <string name="configuracion">Configuración</string>
    <string name="direccionsede">Dirección de la Sede</string>
    <string name="contactosede">Contacto de la Sede</string>
    <string name="usuarioatencion">Usuario para Atención</string>
    <string name="regresar">Regresar</string>
    <string name="verdireccion">Ver Dirección</string>

    <string name="estadoIngresado">INGRESADO</string>
    <string name="estadoAsignado">ASIGNADO</string>
    <string name="estadoRecibido">RECIBIDO</string>
    <string name="estadoAtendido">ATENDIDO</string>
    <string name="estadoCerrado">CERRADO</string>
    <string name="estadoEsperaRep">EN ESPERA DE REPUESTO</string>
    <string name="estadoAnulado">ANULADO</string>
    <string name="observacionticket">Observaciones</string>
    <string name="ordenServicioticket">Orden de Servicio</string>
    <string name="nombreusuario">Nombre del Usuario</string>
    <string name="perfilusuario">Perfil del Usuario</string>
    <string name="correousuario">Correo Electrónico del Usuario</string>
    <string name="cambiarcontrasena">Cambiar Contraseña</string>
    <string name="nuevacontrasena">Nueva Contraseña</string>
    <string name="repetircontrasena">Repetir Contraseña</string>
    <string name="guardarcambiosperfil">Guardar Cambios de Perfil</string>
    <string name="ticketsregistro">Registro de Tickets</string>
    <string name="unidadnegocio">Unidad de Negocio</string>
    <string name="categoriaticket">Categoría</string>
    <string name="nivelurgencia">Nivel de Urgencia</string>
    <string name="nroticketcliente">Nro. de Ticket del Cliente</string>
    <string name="registrarticket">Registrar Ticket</string>
    <string name="fechaticketreg">Fecha de Ticket (dd/mm/yyyy)</string>
    <string name="grabar">Grabar</string>
    <string name="asignar">Asignar Ticket</string>
    <string name="asignartecnico">Asignar Técnico</string>
    <string name="buscartecnico">Buscar Técnico</string>
    <string name="anular">Anular</string>
    <string name="cerrar">Cerrar</string>

    <string name="tituloAlertaConfirmacion">Confirmación</string>
    <string name="ticketsarchivos">Subir Archivos para el Ticket</string>
    <string name="subirfoto">Subir Foto Selecionada</string>
    <string name="archivosasociados">Archivos Asociados</string>
    <string name="agregarfoto">Agregar Foto</string>
    <string name="nombrearchivo">Nombre Archivo Asociado</string>
    <string name="version">App Version</string>
    <string name="liquidacionactual">Liquidación Actual</string>
    <string name="fechaliquidacion">Fecha</string>
    <string name="saldoliquidacion">Saldo</string>
    <string name="nroliquidacion">Número</string>
    <string name="totalliq">Total</string>
    <string name="saldoliq">Saldo</string>
    <string name="saldoinicialliq">Saldo Inicial</string>
    <string name="montoasignadoliq">Monto Asignado</string>
    <string name="totalliquidado">Total Liquidado</string>
    <string name="detalleliq">Detalle Liquidación</string>
    <string name="liquidaciondetallereg">Registro de Detalle de Liquidación</string>
    <string name="fechadetliqreg">Fecha de Detalle (dd/mm/yyyy)</string>
    <string name="motivodetalleliq">Motivo del Detalle</string>
    <string name="lugariniciodetliq">Lugar de Inicio</string>
    <string name="lugarfindetliq">Lugar de Fin</string>
    <string name="importedetliq">Importe</string>
    <string name="totalasignado">Total Asignado</string>

    <string name="serviciogps">Servicio GPS</string>


</resources>
