<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.oalvarez.appticonsulting.fragments.TicketUbicacionFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.gms.maps.MapView
            android:id="@+id/mapSede"
            android:layout_width="match_parent"
            android:layout_height="240dp">

        </com.google.android.gms.maps.MapView>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tilDireccionSede">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/etDireccionSede"
                android:hint="@string/direccionsede"
                android:textSize="16sp"
                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tilContactoSede">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/etContactoSede"
                android:hint="@string/contactosede"
                android:textSize="16sp"
                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tilUsuarioAtencion">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/etUsuarioAtencion"
                android:hint="@string/usuarioatencion"
                android:textSize="16sp"
                />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnRegresar"
            android:layout_gravity="center_horizontal"
            android:text="@string/regresar"/>

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>
