<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.oalvarez.appticonsulting1.fragments.SubirArchivoFragment">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/nsvScroll">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ticketsarchivos"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/colorPrimaryDark"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:padding="5dp">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/btnFoto"
                    android:text="Seleccionar Foto"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="10dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/imgFoto"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/agregarfoto"
                    android:layout_gravity="center_horizontal"
                    android:id="@+id/tvRutaArchivo"
                    />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/btnSubirFoto"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/subirfoto"/>

            </LinearLayout>

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/pbCargaarchivo"
                android:layout_gravity="bottom|end"
                android:indeterminateDrawable="@drawable/progress_bar"
                android:visibility="invisible" />
        </LinearLayout>



    </android.support.v4.widget.NestedScrollView>

    <!-- TODO: Update blank fragment layout -->





</android.support.design.widget.CoordinatorLayout>
